# stellarmodel

./: .gitignore  CMakeLists.txt  README.md
example/: energy_gen.cpp  energy_gen_KIP.cpp  interia.cpp  search_convergence.cpp  sun.cpp  sun10.cpp  sun100.cpp  sun10_100.cpp  sun80.cpp  sun_KIP.cpp
src/: Stellar.cpp  Stellar.h  StellarModel.cpp  StellarModel.h  StellerModel.cpp  StellerModel.h  main.cpp  matplotlibcpp.h
