cmake_minimum_required(VERSION 3.0.0)
project(stellar VERSION 0.1.0)

include(CTest)
enable_testing()

#link_directories("/opt/homebrew/Cellar/eigen/3.4.0_1/include/eigen3")
include_directories("/opt/homebrew/Cellar/eigen/3.4.0_1/include/eigen3")
include_directories("/opt/homebrew/Cellar/python@3.9/3.9.12/Frameworks/Python.framework/Versions/3.9/include/python3.9/")
include_directories("/opt/homebrew/lib/python3.9/site-packages/numpy/core/include/")
include_directories("src")
link_directories("/opt/python-3.10.4/lib")
link_libraries("python3.10")
#aux_source_directory("./src")

add_executable(stellar src/main.cpp src/Stellar.cpp src/Stellar.h)
#add_executable(stellar src/main.cpp)
add_executable(sun example/sun.cpp src/Stellar.cpp src/Stellar.h)
add_executable(sun10 example/sun10.cpp src/Stellar.cpp src/Stellar.h)
add_executable(sun80 example/sun80.cpp src/Stellar.cpp src/Stellar.h)
add_executable(sun10_100 example/sun10_100.cpp src/Stellar.cpp src/Stellar.h)
add_executable(energy_gen example/energy_gen.cpp src/Stellar.cpp src/Stellar.h)
set(CMAKE_CXX_FLAGS "-O4")

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
